# apps/server/src/validators/v1/matches/closeMatchValidators.ts
@@ -3,21 +3,23 @@ import { param } from 'express-validator';
 
 const closeMatchParametersValidator = (): ValidationChain[] => {
   return [
-    param('id')
+    param('gameMatchId')
       .exists()
       .withMessage({
-        message: 'id is required',
-        errorCode: 'validator.closeMatchParametersValidator.id.required',
+        message: 'gameMatchId is required',
+        errorCode:
+          'validator.closeMatchParametersValidator.gameMatchId.required',
       })
       .isInt({ allow_leading_zeroes: false, min: 1 })
       .withMessage({
-        message: 'id must be a positive integer string',
-        errorCode: 'validator.closeMatchParametersValidator.id.integer',
+        message: 'gameMatchId must be a positive integer string',
+        errorCode:
+          'validator.closeMatchParametersValidator.gameMatchId.integer',
       })
       .notEmpty()
       .withMessage({
-        message: 'id cannot be empty',
-        errorCode: 'validator.closeMatchParametersValidator.id.empty',
+        message: 'gameMatchId cannot be empty',
+        errorCode: 'validator.closeMatchParametersValidator.gameMatchId.empty',
       })
       .escape()
       .trim(),
