# packages/api-specification/src/specs/paths/v1/matches/getMatch.openapi.yaml
@@ -1,14 +1,14 @@
 description: |
-  Get an existing match by its ID.
+  Get an existing match by its bancho channel id.
 operationId: getMatch
 
 parameters:
   - in: path
-    name: id
+    name: gameMatchId
     schema:
       type: integer
     required: true
-    description: The ID of the match to get.
+    description: The bancho ID of the match to get.
 
 responses:
   200:
@@ -17,25 +17,25 @@ responses:
         schema:
           properties:
             endsAt:
-              example: 2024-12-31T23:59:59.000Z
+              example: 2025-08-24T13:07:27
               format: date-time
               nullable: true
               type: string
-            id:
-              example: 1
-              type: number
+            gameMatchId:
+              example: 119065801
+              type: integer
             name:
               example: "MWC4K2025 RO32: Philippines VS France"
               type: string
           type: object
-    description: Match and bancho channel closed.
+    description: Match related data.
   400:
     content:
       application/json:
         schema:
           properties:
             instance:
-              example: /api/v1/matches/1
+              example: /api/v1/matches/random-string
               type: string
             status:
               example: 400
@@ -50,23 +50,23 @@ responses:
               items:
                 properties:
                   path:
-                    example: /params/id
+                    example: /params/gameMatchId
                     type: string
                   message:
-                    example: id cannot be empty
+                    example: gameMatchId must be a positive integer string
                     type: string
                   errorCode:
-                    example: validator.getMatchParametersValidator.id.empty
+                    example: validator.getMatchParametersValidator.gameMatchId.integer
                     type: string
           type: object
-    description: Missing or invalid id.
+    description: Missing or invalid gameMatchId.
   401:
     content:
       application/json:
         schema:
           properties:
             instance:
-              example: /api/v1/matches/1
+              example: /api/v1/matches/119065801
               type: string
             status:
               example: 401
