# packages/shared/src/types/api/v1/matches/closeMatchTypes.ts
@@ -2,7 +2,7 @@ import type { ErrorReport } from '#src/classes/httpErrorReportClass.js';
 import type { StringRecord } from '#src/sharedExport.js';
 
 export interface CloseMatchRequestParameters extends StringRecord {
-  id: string;
+  gameMatchId: string;
 }
 
 export interface CloseMatchResponseData {
